[package]
name = "ambient_animation"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Ambient animation functionality. Host-only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_sys = { path = "../sys", version = "0.2.0-rc5" }
ambient_model = { path = "../model" , version = "0.2.0-rc5" }
ambient_std = { path = "../std" , version = "0.2.0-rc5" }
ambient_ecs = { path = "../ecs" , version = "0.2.0-rc5" }
ambient_element = { path = "../../shared_crates/element" , version = "0.2.0-rc5" }
ambient_editor_derive = { path = "../../shared_crates/editor_derive" , version = "0.2.0-rc5" }
ambient_ui_native = { path = "../ui_native" , version = "0.2.0-rc5" }
ambient_core = { path = "../core" , version = "0.2.0-rc5" }
glam = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
convert_case = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
