[package]
name = "ambient_animation"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Ambient animation functionality. Host-only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_sys = { path = "../sys", version = "0.3.0-dev" }
ambient_model = { path = "../model" , version = "0.3.0-dev" }
ambient_std = { path = "../std" , version = "0.3.0-dev" }
ambient_ecs = { path = "../ecs" , version = "0.3.0-dev" }
ambient_core = { path = "../core" , version = "0.3.0-dev" }
glam = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }