[package]
name = "ambient_animation"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Ambient animation functionality. Host-only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_model = { path = "../model" , version = "0.3.0-internal-tangent-010" }
ambient_native_std = { path = "../native_std" , version = "0.3.0-internal-tangent-010" }
ambient_ecs = { path = "../ecs" , version = "0.3.0-internal-tangent-010" }
ambient_core = { path = "../core" , version = "0.3.0-internal-tangent-010" }
glam = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
