[package]
name = "ambient_app"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_sys = { path = "../sys" }
ambient_std = { path = "../std" }
ambient_core = { path = "../core" }
ambient_gizmos = { path = "../gizmos" }
ambient_gpu = { path = "../gpu" }
ambient_renderer = { path = "../renderer" }
ambient_cameras = { path = "../cameras" }
ambient_ecs = { path = "../ecs" }
ambient_element = { path = "../element" }
ambient_ui = { path = "../ui" }
ambient_input = { path = "../input" }
ambient_model = { path = "../model" }
ambient_animation = { path = "../animation" }
winit = { workspace = true }
flume.workspace = true
glam = { workspace = true }
tokio = { workspace = true }
profiling = { workspace = true }
anyhow = { workspace = true }
thread-priority = { workspace = true }
wgpu = { workspace = true }
puffin = { workspace = true, optional = true }
puffin_http = { workspace = true, optional = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
ambient_primitives = { path = "../primitives" }

[features]
profile = ["puffin", "puffin_http", "profiling/profile-with-puffin"]
hotload-includes = [
    "ambient_std/hotload-includes",
    'ambient_gpu/hotload-includes',
    'ambient_renderer/hotload-includes',
    'ambient_gizmos/hotload-includes',
    'ambient_ui/hotload-includes',
    'ambient_model/hotload-includes',
]
