[package]
name = "ambient_app"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_sys = { path = "../sys" }
ambient_std = { path = "../std" }
ambient_core = { path = "../core" }
ambient_gizmos = { path = "../gizmos" }
ambient_gpu = { path = "../gpu" }
ambient_renderer = { path = "../renderer" }
ambient_cameras = { path = "../cameras" }
ambient_ecs = { path = "../ecs" }
ambient_ui_native = { path = "../ui_native" }
ambient_input = { path = "../input" }
ambient_model = { path = "../model" }
ambient_animation = { path = "../animation" }

ambient_element = { path = "../../shared_crates/element" }

winit = { workspace = true }
flume = { workspace = true }
glam = { workspace = true }
tokio = { workspace = true }
ambient_profiling = { workspace = true }
anyhow = { workspace = true }
wgpu = { workspace = true }
puffin = { workspace = true, optional = true }
puffin_http = { workspace = true, optional = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
ambient_primitives = { path = "../primitives" }

[features]
profile = ["puffin", "puffin_http", "ambient_profiling/profile-with-puffin"]
hotload-includes = [
    "ambient_std/hotload-includes",
    'ambient_gpu/hotload-includes',
    'ambient_renderer/hotload-includes',
    'ambient_gizmos/hotload-includes',
    'ambient_ui_native/hotload-includes',
    'ambient_model/hotload-includes',
]

[target.'cfg(target_os = "unknown")'.dependencies]
web-sys = { version = "0.3.61", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlDocument",
    "Performance",
    "Window",
] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
thread-priority = { workspace = true }
