[package]
name = "elements_asset_cache"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
tokio.workspace = true
as-any.workspace = true
async-trait.workspace = true
futures.workspace = true
itertools.workspace = true
thiserror.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
chrono.workspace = true
tracing.workspace = true
pin-project = "1.0"
abort-on-drop.workspace = true

[dev-dependencies]
pretty_assertions = "1.0"
