[package]
name = "ambient_asset_cache"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Asset cache for the Ambient runtime. Host-only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_sys = { path = "../sys" , version = "0.3.0-nightly-2023-09-05" }
serde = { workspace = true }
as-any = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
pin-project = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
