[package]
name = "ambient_asset_timeline"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_sys = { path = "../sys" }
ambient_ecs = { path = "../ecs" }
ambient_std = { path = "../std" }
ambient_ui = { path = "../ui" }
ambient_core = { path = "../core" }
ambient_element = { path = "../element" }
ambient_renderer = { path = "../renderer" }
env_logger = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ambient_app = { path = "../app" }
ambient_cameras = { path = "../cameras" }
ambient_model = { path = "../model" }
tokio = { workspace = true }
tracing-subscriber = "0.3"
async-trait = { workspace = true }
