[package]
name = "ambient_client_shared"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_core = { path = "../core" , version = "0.3.2-internal-lag-probe-smoketest" }
ambient_ecs = { path = "../ecs" , version = "0.3.2-internal-lag-probe-smoketest" }
ambient_element = { path = "../../shared_crates/element" , version = "0.3.2-internal-lag-probe-smoketest" }
ambient_input = { path = "../input" , version = "0.3.2-internal-lag-probe-smoketest" }
ambient_network = { path = "../network/" , version = "0.3.2-internal-lag-probe-smoketest" }
ambient_shared_types = { path = "../../shared_crates/shared_types/" , version = "0.3.2-internal-lag-probe-smoketest" }
ambient_ui_native = { path = "../ui_native/" , version = "0.3.2-internal-lag-probe-smoketest" }
ambient_layout = { path = "../layout/" , version = "0.3.2-internal-lag-probe-smoketest" }
ambient_debugger = { path = "../debugger/" , version = "0.3.2-internal-lag-probe-smoketest" }

ambient_ecs_editor = { path = "../ecs_editor/" , version = "0.3.2-internal-lag-probe-smoketest" }

glam = { workspace = true }
rand = { workspace = true }
