[package]
name = "ambient_curve"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_std = { path = "../std" }

[dev-dependencies]
glam = { workspace = true }
