[package]
name = "ambient_debugger"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Ambient debugger. Host-only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

[dependencies]
ambient_ui_native = { path = "../ui_native", version = "0.3.0-internal-tangent-010" }
ambient_ecs = { path = "../ecs", version = "0.3.0-internal-tangent-010" }
ambient_native_std = { path = "../native_std", version = "0.3.0-internal-tangent-010" }
ambient_renderer = { path = "../renderer", version = "0.3.0-internal-tangent-010" }
ambient_core = { path = "../core", version = "0.3.0-internal-tangent-010" }
ambient_gizmos = { path = "../gizmos", version = "0.3.0-internal-tangent-010" }
ambient_rpc = { path = "../rpc", version = "0.3.0-internal-tangent-010" }
ambient_network = { path = "../network", version = "0.3.0-internal-tangent-010" }
ambient_sys = { path = "../sys", version = "0.3.0-internal-tangent-010" }

ambient_std = { path = "../../shared_crates/std", version = "0.3.0-internal-tangent-010" }
ambient_element = { path = "../../shared_crates/element", version = "0.3.0-internal-tangent-010" }
ambient_shared_types = { path = "../../shared_crates/shared_types", features = [
    "native",
], version = "0.3.0-internal-tangent-010" }

glam = { workspace = true }
wgpu = { workspace = true }
tracing = { workspace = true }
