[package]
name = "ambient_debugger"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Ambient debugger. Host-only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

[dependencies]
ambient_ui_native = { path = "../ui_native", version = "0.3.0-rc.4a" }
ambient_ecs = { path = "../ecs", version = "0.3.0-rc.4a" }
ambient_native_std = { path = "../native_std", version = "0.3.0-rc.4a" }
ambient_renderer = { path = "../renderer", version = "0.3.0-rc.4a" }
ambient_core = { path = "../core", version = "0.3.0-rc.4a" }
ambient_gizmos = { path = "../gizmos", version = "0.3.0-rc.4a" }
ambient_rpc = { path = "../rpc", version = "0.3.0-rc.4a" }
ambient_network = { path = "../network", version = "0.3.0-rc.4a" }
ambient_sys = { path = "../sys", version = "0.3.0-rc.4a" }

ambient_std = { path = "../../shared_crates/std", version = "0.3.0-rc.4a" }
ambient_element = { path = "../../shared_crates/element", version = "0.3.0-rc.4a" }
ambient_shared_types = { path = "../../shared_crates/shared_types", features = [
    "native",
], version = "0.3.0-rc.4a" }

glam = { workspace = true }
wgpu = { workspace = true }
tracing = { workspace = true }
