[package]
name = "ambient_decals"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_asset_cache = { path = "../asset_cache" }
ambient_ui = { path = "../ui" }
ambient_ecs = { path = "../ecs" }
ambient_renderer = { path = "../renderer" }
ambient_gpu = { path = "../gpu" }
ambient_std = { path = "../std" }
ambient_core = { path = "../core" }
ambient_meshes = { path = "../meshes" }
log = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
ambient_app = { path = "../app" }
ambient_element = { path = "../element" }
ambient_primitives = { path = "../primitives" }
ambient_cameras = { path = "../cameras" }
env_logger = { workspace = true }

[features]
hotload-includes = [
    'ambient_std/hotload-includes',
    'ambient_renderer/hotload-includes',
    'ambient_gpu/hotload-includes',
]
