[package]
name = "ambient_decals"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Ambient decals. Host-only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_asset_cache = { path = "../asset_cache" , version = "0.3.0-nightly-2023-09-23" }
ambient_ecs = { path = "../ecs" , version = "0.3.0-nightly-2023-09-23" }
ambient_renderer = { path = "../renderer" , version = "0.3.0-nightly-2023-09-23" }
ambient_gpu = { path = "../gpu" , version = "0.3.0-nightly-2023-09-23" }
ambient_gpu_ecs = { path = "../gpu_ecs" , version = "0.3.0-nightly-2023-09-23" }
ambient_native_std = { path = "../native_std" , version = "0.3.0-nightly-2023-09-23" }
ambient_core = { path = "../core" , version = "0.3.0-nightly-2023-09-23" }
ambient_meshes = { path = "../meshes" , version = "0.3.0-nightly-2023-09-23" }
log = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
ambient_app = { path = "../app" }
ambient_element = { path = "../../shared_crates/element" }
ambient_primitives = { path = "../primitives" }
ambient_cameras = { path = "../cameras" }
env_logger = { workspace = true }

[features]
hotload-includes = [
    'ambient_native_std/hotload-includes',
    'ambient_renderer/hotload-includes',
    'ambient_gpu/hotload-includes',
]
