[package]
name = "ambient_deploy"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Functionality for deploying Ambient packages."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_package = { path = "../../shared_crates/package" , version = "0.3.0-dev" }
ambient_sys = { path = "../sys" , version = "0.3.0-dev" }

anyhow = { workspace = true }
flume = { workspace = true }
log = { workspace = true }
md-5 = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
walkdir = { workspace = true }
