
[package]
name = "ambient_ecs"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_std = { path = "../std" }
itertools = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
profiling = { workspace = true }
yaml-rust = { workspace = true }
log = { workspace = true }
derive_more = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
atomic_refcell = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
downcast-rs = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
bit-set = { workspace = true }
bit-vec = { workspace = true }
reqwest = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
data-encoding = { workspace = true }

erased-serde = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
