
[package]
name = "ambient_ecs"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Ambient ECS. Host-only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_native_std = { path = "../native_std" , version = "0.3.0-dev" }
ambient_shared_types = { path = "../../shared_crates/shared_types", features = ["native"] , version = "0.3.0-dev" }
ambient_project_rt = { path = "../../shared_crates/project_rt" , version = "0.3.0-dev" }

itertools = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
profiling = { workspace = true }
yaml-rust = { workspace = true }
log = { workspace = true }
derive_more = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
atomic_refcell = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
downcast-rs = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
bit-set = { workspace = true }
bit-vec = { workspace = true }
reqwest = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
data-encoding = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }

erased-serde = "0.3"

[build-dependencies]
ambient_project_macro_common = { path = "../../shared_crates/project_macro_common" , version = "0.3.0-dev" }
tokio = { workspace = true }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
tokio = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
