
[package]
name = "ambient_ecs"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Ambient ECS. Host-only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_sys = { path = "../sys", version = "0.3.0-nightly-2023-09-20" }
ambient_native_std = { path = "../native_std" , version = "0.3.0-nightly-2023-09-20" }
ambient_shared_types = { path = "../../shared_crates/shared_types", features = ["native"] , version = "0.3.0-nightly-2023-09-20" }
ambient_package_rt = { path = "../../shared_crates/package_rt" , version = "0.3.0-nightly-2023-09-20" }

itertools = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
profiling = { workspace = true }
yaml-rust = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
atomic_refcell = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
downcast-rs = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
bit-set = { workspace = true }
bit-vec = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
data-encoding = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }

erased-serde = "0.3"

[build-dependencies]
ambient_package_macro_common = { path = "../../shared_crates/package_macro_common" , version = "0.3.0-dev" }
ambient_sys = { path = "../sys", version = "0.3.0-dev" }

[dev-dependencies]
bincode = { workspace = true }
